# today-google-calendar

./: .flake8  .gitignore  Pipfile  README.md  pyproject.toml  setup.py
src/: today_google_calendar.py
src/credentials/: .gitignore
src/environments/: __init__.py  _version.py
src/google/: calendar.py
src/today_google_calendar/: __init__.py  today_google_calendar.py
src/today_google_calendar/config/: .env.sample  config.py
src/today_google_calendar/google/: calendar.py
src/today_google_calendar/lib/google/: calendar.py
