[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "today-google-calendar"
description = "GoogleCalendarから一日の予定を取得し、整形して表示する"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10"
]
requires-python = "==3.10.*"
dependencies = [
    'httplib2',
    'google-api-python-client',
    'oauth2client',
    'click',
    'pyperclip'
]
dynamic = ["version]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "foo.version.version"}

[tool.setuptools_scm]
write_to = "src/foo/version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
