[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "today-google-calendar"
description = "GoogleCalendarから一日の予定を取得し、整形して表示する"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10"
]
requires-python = "==3.10.*"
dependencies = [
    "httplib2~=0.21.0",
    "google-api-python-client~=2.73.0",
    "oauth2client~=4.1.3",
    "click~=8.1.3",
    "pyperclip~=1.8.2",
    "python-dotenv~=0.21.0",
    "python-dateutil~=2.8.2",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/tomotaka-yamasaki/today-google-calendar"

[project.scripts]
"today-google-calendar" = "src.today_google_calendar.today_google_calendar:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hitokoto" = ["config/.env", "credentials/credentials.json"]

[tool.setuptools.dynamic]
version = {attr = "environments._version.version"}

[tool.setuptools_scm]
write_to = "src/environments/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.mypy]
python_version = 3.10
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[tool.black]
target-version = ['py310']
include = '\.py$'
line-length = 120

[tool.isort]
profile = "black"
py_version = 310
line_length = 120
