[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "today-google-calendar"
description = "GoogleCalendarから一日の予定を取得し、整形して表示する"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "httplib2>=0.21.0",
    "google-api-python-client>=2.73.0",
    "google-auth>=2.22.0",
    "click>=8.1.3",
    "pyperclip>=1.8.2",
    "python-dotenv>=0.21.0",
    "python-dateutil>=2.8.2",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/tomotaka-yamasaki/today-google-calendar"

[project.scripts]
"today-google-calendar" = "today_google_calendar.today_google_calendar:main"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.hatch.build]
artifacts = [
    "src/today_google_calendar/config/.env",
    "src/today_google_calendar/credentials/credentials.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src/today_google_calendar"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "N", "T20", "I"]
ignore = ["F403", "F405", "E402"]

[tool.ruff.lint.per-file-ignores]
"src/today_google_calendar/today_google_calendar.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["today_google_calendar"]
